GUI fix for menu button on Firefox for Windows on large screens

--- a/src/custom-elements/main-navigation/main-menu/main-menu.scss
+++ b/src/custom-elements/main-navigation/main-menu/main-menu.scss
@@ -19,7 +19,7 @@ button.menu-toggle-button {
         height: 37px;
     }
     @include breakpoint(laptop) {
-        width: 95px;
+        width: 98px;
         background-color: rgb(125, 116, 109);
         color: #fff;
     }
@@ -29,7 +29,7 @@ button.menu-toggle-button {
     span {
         font-size: 1.2em;
         font-weight: 700;
-        padding: 2px;
+        padding: 2px 1px;
         vertical-align: middle;
         &.menu-title {
             display: none;
